# plugsbox

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
develop/: Dockerfile  configuration.py  dev.env  docker-compose.yml
develop/rest/: netbox.http  parsedbsys.py  parsefile.py  tags.txt
plugsbox/: __init__.py  choices.py  config.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
plugsbox/api/: serializers.py  urls.py  views.py
plugsbox/migrations/: 0001_initial.py  0002_alter_gestionnaire_description_and_more.py  0002_alter_plug_location.py  0002_plug_activation_date.py  0002_plug_related_device.py  0003_alter_plug_activation_date.py  0004_plug_interface_plug_switch.py  0005_plug_cable_plug_user_interface.py
plugsbox/static/plugsbox/js/: plug_form.js
plugsbox/templates/dcim/device/: plugs.html
plugsbox/templates/plugsbox/: gestionnaire.html  gestionnaire_edit.html  gestionnaire_list.html  home.html  plug.html  plug_bulk_delete.html  plug_bulk_edit.html  plug_delete.html  plug_edit.html  plug_import.html  plug_list.html
