[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugsbox"
version = "0.1.0"
description = "A NetBox plugin for managing campus network outlets."
authors = [
    {name = "Votre Nom", email = "votre.email@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/plugsbox"
Repository = "https://github.com/yourusername/plugsbox"
Issues = "https://github.com/yourusername/plugsbox/issues"

[tool.setuptools]
packages = ["plugsbox"]
include-package-data = true

[tool.setuptools.package-data]
plugsbox = ["static/**/*", "templates/**/*", "migrations/**/*"]